<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deleteItems"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_items"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/clearSelection"
        android:icon="@drawable/ic_close"
        android:title="@string/clear_selection"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

</menu>